# 35_ESP32_S3_CAM

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  ESP32-P4-NANO调试报告.docx  README.md  sdkconfig.defaults  生成报告.py
docs/: bringup-record-2026-06-07.md  bringup-record-2026-06-13.md  codex-project-goal.md
experiments/wifi_only/: CMakeLists.txt  sdkconfig.defaults
experiments/wifi_only/main/: idf_component.yml  main.c
main/: CMakeLists.txt  ESP32_P4_DISPLACEMENT.h  Kconfig.projbuild  idf_component.yml  main.c
main/acquisition/: acq_manager.c  acq_manager.h  camera_capture_task.c  camera_capture_task.h  camera_frame_msg.h  displacement_sample.h  roi_process_task.c  roi_process_task.h  sdcard_write_task.c  sdcard_write_task.h  timing.h
main/board/: board_config.h
main/config/: app_config.c  app_config.h
main/drivers/: p4_camera.c  p4_camera.h  sdcard.c  sdcard.h
main/network/: http_api.c  http_api.h  http_server.c  http_server.h  udp_discovery.c  udp_discovery.h  wifi_manager.c  wifi_manager.h
main/storage/: csv_writer.c  csv_writer.h  file_manager.c  file_manager.h
main/system/: app_context.c  app_context.h  node_state.c  node_state.h
main/vision/: roi_tracker.c  roi_tracker.h
